--- a/data.html
+++ b/data.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="d-flex flex-column min-vh-100 bg-light">
+<body class="d-flex flex-column min-vh-100 bg-white">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-primary shadow-sm fixed-top">
     <div class="container">
@@ -18,8 +18,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link fw-semibold" href="index.html">Input Nilai</a></li>
-          <li class="nav-item"><a class="nav-link active fw-semibold text-white" href="data.html">Lihat Data Mahasiswa</a></li>
+          <li class="nav-item"><a class="nav-link active fw-semibold text-dark" href="index.html">Input Nilai</a></li>
+          <li class="nav-item"><a class="nav-link active fw-semibold text-white" href="data.html">Lihat Data Nilai</a></li>
         </ul>
       </div>
     </div>
@@ -31,12 +31,12 @@
       <div class="card shadow-lg p-4">
         <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
           <h3 class="fw-bold text-center flex-grow-1 mb-0">Data Nilai Mahasiswa</h3>
-          <button class="btn btn-primary" id="printPdfBtn">Cetak PDF</button>
+          <button class="btn btn-danger" id="printPdfBtn">Cetak PDF</button>
         </div>
 
         <div class="table-responsive">
           <table class="table table-striped table-bordered align-middle text-center" id="tabelNilai">
-            <thead class="table-dark text-white">
+            <thead class="table-dark">
               <tr>
                 <th>No.</th>
                 <th>Nama Lengkap</th>
