--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="bg-light">
+  <body class="bg-white">
     <!-- Navbar -->
     <nav
       class="navbar navbar-expand-lg navbar-light bg-primary shadow-sm fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand fw-bold text-white" href="#"
+        <a class="navbar-brand fw-bold text-white" href="/"
           >Portal Akademik</a
         >
         <button
@@ -33,12 +33,12 @@
             <li class="nav-item">
               <a
                 class="nav-link active fw-semibold text-white"
-                href="input.html"
+                href="index.html"
                 >Input Nilai</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-semibold" href="data.html"
+              <a class="nav-link active fw-semibold text-black" href="data.html"
                 >Lihat Data Nilai</a
               >
             </li>
@@ -75,7 +75,7 @@
               type="text"
               class="form-control"
               id="nim"
-              placeholder="Contoh: 10119001"
+              placeholder="Contoh: 701230000"
               required
             />
           </div>
@@ -103,11 +103,11 @@
               type="number"
               class="form-control"
               id="nilai"
-              placeholder="Masukkan nilai..."
+              placeholder="Nilai: 1 - 100"
               required
             />
           </div>
-          <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold">
+          <button type="submit" class="btn btn-primary w-100 py-2 fw-semibold text-white">
             Simpan Data
           </button>
         </form>
@@ -115,7 +115,7 @@
     </div>
     <!-- Footer -->
     <footer class="mt-auto text-center py-3 bg-white shadow-sm">
-      <p class="mb-0 text-secondary small">
+      <p class="mb-0 text-secondary small ">
         Copyright 2025 Portal Akademik - Kelompok 7
       </p>
     </footer>
