--- a/data.html
+++ b/data.html
@@ -1,65 +1,92 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portal Akademik - Data Nilai Mahasiswa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portal Akademik - Data Nilai Mahasiswa</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body class="d-flex flex-column min-vh-100 bg-white">
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-primary shadow-sm fixed-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold text-white" href="/">Portal Akademik</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active fw-semibold text-dark" href="index.html">Input Nilai</a></li>
-          <li class="nav-item"><a class="nav-link active fw-semibold text-white" href="data.html">Lihat Data Nilai</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Konten Utama -->
-  <main class="flex-fill">
-    <div class="container py-5 mt-5">
-      <div class="card shadow-lg p-4">
-        <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
-          <h3 class="fw-bold text-center flex-grow-1 mb-0">Data Nilai Mahasiswa</h3>
-          <button class="btn btn-danger" id="printPdfBtn">Cetak PDF</button>
-        </div>
-
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered align-middle text-center" id="tabelNilai">
-            <thead class="table-dark">
-              <tr>
-                <th>No.</th>
-                <th>Nama Lengkap</th>
-                <th>NIM</th>
-                <th>Mata Kuliah</th>
-                <th>Nilai</th>
-              </tr>
-            </thead>
-            <tbody id="tabelData"></tbody>
-          </table>
+  <body class="d-flex flex-column min-vh-100 bg-white">
+    <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-success shadow-sm fixed-top"
+    >
+      <div class="container">
+        <a class="navbar-brand fw-bold text-white" href="/">Portal Akademik</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active fw-semibold text-white" href="index.html"
+                >Input Nilai</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fw-semibold text-dark" href="data.html"
+                >Lihat Data Nilai</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-  </main>
+    </nav>
 
-  <!-- Footer -->
-  <footer class="mt-auto text-center py-3 bg-white shadow-sm">
-    <p class="mb-0 text-secondary small">Copyright 2025 Portal Akademik - Kelompok 7</p>
-  </footer>
+    <!-- Konten Utama -->
+    <main class="flex-fill">
+      <div class="container py-5 mt-5">
+        <div class="card shadow-lg p-4">
+          <div
+            class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2"
+          >
+            <h3 class="fw-bold text-center flex-grow-1 mb-0">
+              Data Nilai Mahasiswa
+            </h3>
+            <button class="btn btn-danger" id="printPdfBtn">Cetak PDF</button>
+          </div>
 
-  <!-- Script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-  <script type="module" src="logic.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+          <div class="table-responsive">
+            <table
+              class="table table-striped table-bordered align-middle text-center"
+              id="tabelNilai"
+            >
+              <thead class="table-dark">
+                <tr>
+                  <th>No.</th>
+                  <th>Nama Lengkap</th>
+                  <th>NIM</th>
+                  <th>Mata Kuliah</th>
+                  <th>Nilai</th>
+                </tr>
+              </thead>
+              <tbody id="tabelData"></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="mt-auto text-center py-3 bg-success shadow-sm">
+      <p class="mb-0 text-white small">
+        Copyright 2025 Portal Akademik - Kelompok 7
+      </p>
+    </footer>
+
+    <!-- Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script type="module" src="logic.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
